--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 
+
+/* font import link */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@200&display=swap');
-
-
 
 *{
     font-family: 'Roboto Serif', sans-serif;
 }
+
